--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -969,6 +969,7 @@ tab.event                = Esdeveniments
 tab.forum                = Forums
 tab.grades               = Graus
 tab.logs                 = Registres
+tab.multi                = Multi
 tab.noenrolleduser       = Not enrolled
 tab.risk                 = Risk of dropping out
 tab.section              = Secci\u00F3
