--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -966,6 +966,7 @@ tab.event                = Veranstaltungen
 tab.forum                = Forums
 tab.grades               = Noten
 tab.logs                 = Protokolle
+tab.multi                = Multi
 tab.noenrolleduser       = Not enrolled
 tab.risk                 = Risk of dropping out
 tab.section              = Abschnitt
