--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1043,6 +1043,7 @@ tab.event                = Events
 tab.forum                = Forums
 tab.grades               = Grades
 tab.logs                 = Logs
+tab.multi                = Multi
 tab.noenrolleduser       = Not enrolled
 tab.risk                 = Risk of dropping out
 tab.section              = Sections
