--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1043,6 +1043,7 @@ tab.event                = Eventos
 tab.forum                = Foros
 tab.grades               = Calificaciones
 tab.logs                 = Registros
+tab.multi                = Multi
 tab.noenrolleduser       = No matriculados
 tab.risk                 = Riesgo de abandono
 tab.section              = Secci\u00F3n
