--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -969,6 +969,7 @@ tab.event                = \u00C9v\u00E9nements
 tab.forum                = Forums
 tab.grades               = Les notes
 tab.logs                 = Les journaux
+tab.multi                = Multi
 tab.noenrolleduser       = Not enrolled
 tab.risk                 = Risk of dropping out
 tab.section              = Section
