--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -969,6 +969,7 @@ tab.event                = eventi
 tab.forum                = Forums
 tab.grades               = gradi
 tab.logs                 = logs
+tab.multi                = Multi
 tab.noenrolleduser       = Not enrolled
 tab.risk                 = Risk of dropping out
 tab.section              = Sezione
