--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -969,6 +969,7 @@ tab.event                = Eventos
 tab.forum                = Forums
 tab.grades               = Notas
 tab.logs                 = Logs
+tab.multi                = Multi
 tab.noenrolleduser       = Not enrolled
 tab.risk                 = Risk of dropping out
 tab.section              = Se\u00E7\u00E3o
