#112 word con reporte de ranking

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -265,6 +265,8 @@ fontColorXScaleTitle = Schriftfarbe X-Achse
 
 fontColorYScaleTitle = Schriftfarbe Y-Achse
 
+forum = forum
+
 fourthInterval = vierte Intervall
 
 general = Allgemeines
@@ -846,6 +848,7 @@ menu.exportcsv           = CSV-Daten exportieren...
 menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
 menu.exportphotos        = With user photos...
+menu.exportrankingreport = Export ranking report...
 menu.file                = _Datei
 menu.githubpage          = _GitHub repository
 menu.help                = Hilfe
@@ -946,13 +949,15 @@ physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spr
 
 physicsAfterDraw = Enable physics after draw
 
-root = root
+root = course
 
 secondInterval = Sekunden-Intervall
 
 showNonConnected = Show nodes without edges
 
 showNumberPosts = Show number of posts
+
+statisticsRanking = Statistics ranking
 
 stopWords = Stop words language
 
@@ -1066,6 +1071,8 @@ useInitialNames = Use initials of names
 usePhoto = Use photos
 
 useQuartile = Mit Quartile
+
+user = user
 
 warning = Warning
 
