--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -339,6 +339,8 @@ fontColorXScaleTitle = Font color X-axis
 
 fontColorYScaleTitle = Font color Y-axis
 
+forum = forum
+
 fourthInterval = Fourth interval
 
 general = General
@@ -923,6 +925,7 @@ menu.exportcsv           = E_xport CSV data...
 menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
 menu.exportphotos        = With user photos...
+menu.exportrankingreport = Export ranking report...
 menu.file                = _File
 menu.githubpage          = _GitHub repository
 menu.help                = _Help
@@ -1023,13 +1026,15 @@ physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spr
 
 physicsAfterDraw = Enable physics after draw
 
-root = root
+root = course
 
 secondInterval = Second interval
 
 showNonConnected = Show nodes without edges
 
 showNumberPosts = Show number of posts
+
+statisticsRanking = Statistics ranking
 
 stopWords = Stop words language
 
@@ -1143,6 +1148,8 @@ useInitialNames = Use initials of names
 usePhoto = Use photos
 
 useQuartile = With quartiles
+
+user = user
 
 warning = Warning
 
