--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -339,6 +339,8 @@ fontColorXScaleTitle = Color de fuente eje X
 
 fontColorYScaleTitle = Color de fuente eje Y
 
+forum = foro
+
 fourthInterval = Cuarto intervalo
 
 general = General
@@ -923,6 +925,7 @@ menu.exportcsv           = E_xportar datos CSV...
 menu.exportdashboard     = Exportar dashboard...
 menu.exportdefaultphotos = Con foto por defecto...
 menu.exportphotos        = Con fotos de usuarios...
+menu.exportrankingreport = Exportar informe ranking...
 menu.file                = _Archivo
 menu.githubpage          = Repositorio en _GitHub
 menu.help                = A_yuda
@@ -1023,13 +1026,15 @@ physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Con
 
 physicsAfterDraw = Habilitar la f\u00EDsica despu\u00E9s de dibujar
 
-root = ra\u00EDz
+root = curso
 
 secondInterval = Segundo intervalo
 
 showNonConnected = Mostrar nodos sin aristas
 
 showNumberPosts = Mostrar n\u00FAmero de mensajes
+
+statisticsRanking = Ranking estad\u00EDstico
 
 stopWords = Idioma de palabras vac\u00EDas
 
@@ -1143,6 +1148,8 @@ useInitialNames = Usar iniciales de nombres
 usePhoto = Usar fotos
 
 useQuartile = Con cuartiles
+
+user = usuario
 
 warning = Advertencia
 
