--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -265,6 +265,8 @@ fontColorXScaleTitle = X-axe de la couleur de la police
 
 fontColorYScaleTitle = Font couleur axe Y
 
+forum = forum
+
 fourthInterval = quatri\u00E8me intervalle
 
 general = G\u00E9n\u00E9ral
@@ -849,6 +851,7 @@ menu.exportcsv           = Exporter des donn\u00E9es CSV...
 menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
 menu.exportphotos        = With user photos...
+menu.exportrankingreport = Export ranking report...
 menu.file                = _Fichier
 menu.githubpage          = _GitHub repository
 menu.help                = Aidez-moi
@@ -949,13 +952,15 @@ physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spr
 
 physicsAfterDraw = Enable physics after draw
 
-root = root
+root = course
 
 secondInterval = deuxi\u00E8me intervalle
 
 showNonConnected = Show nodes without edges
 
 showNumberPosts = Show number of posts
+
+statisticsRanking = Statistics ranking
 
 stopWords = Stop words language
 
@@ -1069,6 +1074,8 @@ useInitialNames = Use initials of names
 usePhoto = Use photos
 
 useQuartile = Cvec quartiles
+
+user = user
 
 warning = Warning
 
