--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -265,6 +265,8 @@ fontColorXScaleTitle = Colore carattere asse X
 
 fontColorYScaleTitle = Carattere di colore Y
 
+forum = forum
+
 fourthInterval = quarto intervallo
 
 general = Generale
@@ -849,6 +851,7 @@ menu.exportcsv           = Esporta dati CSV...
 menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
 menu.exportphotos        = With user photos...
+menu.exportrankingreport = Export ranking report...
 menu.file                = _File
 menu.githubpage          = _GitHub repository
 menu.help                = Aiuto
@@ -949,13 +952,15 @@ physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spr
 
 physicsAfterDraw = Enable physics after draw
 
-root = root
+root = course
 
 secondInterval = Secondo intervallo
 
 showNonConnected = Show nodes without edges
 
 showNumberPosts = Show number of posts
+
+statisticsRanking = Statistics ranking
 
 stopWords = Stop words language
 
@@ -1069,6 +1074,8 @@ useInitialNames = Use initials of names
 usePhoto = Use photos
 
 useQuartile = Con quartili
+
+user = user
 
 warning = Warning
 
