--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -265,6 +265,8 @@ fontColorXScaleTitle = cor da fonte eixo X-
 
 fontColorYScaleTitle = Fonte cor Y-eixo
 
+forum = forum
+
 fourthInterval = quarto intervalo
 
 general = Geral
@@ -849,6 +851,7 @@ menu.exportcsv           = Exportar dados CSV...
 menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
 menu.exportphotos        = With user photos...
+menu.exportrankingreport = Export ranking report...
 menu.file                = _Arquivo
 menu.githubpage          = _GitHub repository
 menu.help                = Socorro
@@ -956,6 +959,8 @@ secondInterval = Segundo intervalo
 showNonConnected = Show nodes without edges
 
 showNumberPosts = Show number of posts
+
+statisticsRanking = Statistics ranking
 
 stopWords = Stop words language
 
@@ -1069,6 +1074,8 @@ useInitialNames = Use initials of names
 usePhoto = Use photos
 
 useQuartile = Com quartis
+
+user = user
 
 warning = Warning
 
