--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -265,6 +265,8 @@ fontColorXScaleTitle = Color de font eix X
 
 fontColorYScaleTitle = Color de font eix I
 
+forum = forum
+
 fourthInterval = quart interval
 
 general = General
@@ -849,6 +851,7 @@ menu.exportcsv           = Exportar CSV...
 menu.exportdashboard     = Export dashboard...
 menu.exportdefaultphotos = With default photo...
 menu.exportphotos        = With user photos...
+menu.exportrankingreport = Export ranking report...
 menu.file                = _Dossier
 menu.githubpage          = _GitHub repository
 menu.help                = Ajuda
@@ -949,13 +952,15 @@ physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spr
 
 physicsAfterDraw = Enable physics after draw
 
-root = root
+root = course
 
 secondInterval = segon interval
 
 showNonConnected = Show nodes without edges
 
 showNumberPosts = Show number of posts
+
+statisticsRanking = Statistics ranking
 
 stopWords = Stop words language
 
@@ -1069,6 +1074,8 @@ useInitialNames = Use initials of names
 usePhoto = Use photos
 
 useQuartile = Cmb quartils
+
+user = user
 
 warning = Warning
 
