Cambiado ultimo puesto ranking, traducciones

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -88,6 +88,8 @@ MEAN_DIFF.yAxisTitle = Logs
 
 RADAR = Radar
 
+RANKING_TABLE = Ranking
+
 REPULSION = Repulsion
 
 RISK_BAR = Compared risk
@@ -971,7 +973,7 @@ tab.event                = Veranstaltungen
 tab.forum                = Forums
 tab.grades               = Noten
 tab.logs                 = Protokolle
-tab.multi                = Multi
+tab.multi                = Comparisons
 tab.noenrolleduser       = Not enrolled
 tab.risk                 = Risk of dropping out
 tab.section              = Abschnitt
@@ -982,6 +984,7 @@ tabs.CALENDAR_EVENT      = Calendar events
 tabs.FORUM               = Forums
 tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
+tabs.MULTI               = Comparisons
 tabs.RISK                = Risk of dropping out
 
 text.activitycompletion   = Activities completion
