--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -88,6 +88,8 @@ MEAN_DIFF.yAxisTitle = Registros
 
 RADAR = Radar
 
+RANKING_TABLE = Clasificaci\u00F3n
+
 REPULSION = Repulsi\u00F3n
 
 RISK_BAR = Riesgo comparado
@@ -1048,7 +1050,7 @@ tab.event                = Eventos
 tab.forum                = Foros
 tab.grades               = Calificaciones
 tab.logs                 = Registros
-tab.multi                = Multi
+tab.multi                = Comparaciones
 tab.noenrolleduser       = No matriculados
 tab.risk                 = Riesgo de abandono
 tab.section              = Secci\u00F3n
@@ -1059,6 +1061,7 @@ tabs.CALENDAR_EVENT      = Eventos del calendario
 tabs.FORUM               = Foros
 tabs.GRADES              = An\u00E1lisis visual - Calificaciones
 tabs.LOGS                = An\u00E1lisis visual - Registros
+tabs.MULTI               = Comparaciones
 tabs.RISK                = Riesgo de abandono
 
 text.activitycompletion   = Actividades finalizadas
