--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -88,6 +88,8 @@ MEAN_DIFF.yAxisTitle = Hist\u00F3rico
 
 RADAR = Radar
 
+RANKING_TABLE = Ranking
+
 REPULSION = Repulsion
 
 RISK_BAR = Compared risk
@@ -974,7 +976,7 @@ tab.event                = Eventos
 tab.forum                = Forums
 tab.grades               = Notas
 tab.logs                 = Logs
-tab.multi                = Multi
+tab.multi                = Comparisons
 tab.noenrolleduser       = Not enrolled
 tab.risk                 = Risk of dropping out
 tab.section              = Se\u00E7\u00E3o
@@ -985,6 +987,7 @@ tabs.CALENDAR_EVENT      = Calendar events
 tabs.FORUM               = Forums
 tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
+tabs.MULTI               = Comparisons
 tabs.RISK                = Risk of dropping out
 
 text.activitycompletion   = Activities completion
