--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -88,6 +88,8 @@ MEAN_DIFF.yAxisTitle = Logs
 
 RADAR = Radar
 
+RANKING_TABLE = Ranking
+
 REPULSION = Repulsion
 
 RISK_BAR = Compared risk
@@ -1048,7 +1050,7 @@ tab.event                = Events
 tab.forum                = Forums
 tab.grades               = Grades
 tab.logs                 = Logs
-tab.multi                = Multi
+tab.multi                = Comparisons
 tab.noenrolleduser       = Not enrolled
 tab.risk                 = Risk of dropping out
 tab.section              = Sections
@@ -1059,6 +1061,7 @@ tabs.CALENDAR_EVENT      = Calendar events
 tabs.FORUM               = Forums
 tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
+tabs.MULTI               = Comparisons
 tabs.RISK                = Risk of dropping out
 
 text.activitycompletion   = Activities completion
