--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -88,6 +88,8 @@ MEAN_DIFF.yAxisTitle = Journaux
 
 RADAR = Radar
 
+RANKING_TABLE = Ranking
+
 REPULSION = Repulsion
 
 RISK_BAR = Compared risk
@@ -974,7 +976,7 @@ tab.event                = \u00C9v\u00E9nements
 tab.forum                = Forums
 tab.grades               = Les notes
 tab.logs                 = Les journaux
-tab.multi                = Multi
+tab.multi                = Comparisons
 tab.noenrolleduser       = Not enrolled
 tab.risk                 = Risk of dropping out
 tab.section              = Section
@@ -985,6 +987,7 @@ tabs.CALENDAR_EVENT      = Calendar events
 tabs.FORUM               = Forums
 tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
+tabs.MULTI               = Comparisons
 tabs.RISK                = Risk of dropping out
 
 text.activitycompletion   = Activities completion
