--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -88,6 +88,8 @@ MEAN_DIFF.yAxisTitle = Logs
 
 RADAR = Radar
 
+RANKING_TABLE = Ranking
+
 REPULSION = Repulsion
 
 RISK_BAR = Compared risk
@@ -974,7 +976,7 @@ tab.event                = eventi
 tab.forum                = Forums
 tab.grades               = gradi
 tab.logs                 = logs
-tab.multi                = Multi
+tab.multi                = Comparisons
 tab.noenrolleduser       = Not enrolled
 tab.risk                 = Risk of dropping out
 tab.section              = Sezione
@@ -985,6 +987,7 @@ tabs.CALENDAR_EVENT      = Calendar event
 tabs.FORUM               = Forums
 tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
+tabs.MULTI               = Comparisons
 tabs.RISK                = Risk of dropping out
 
 text.activitycompletion   = Activities completion
