#115 grafico de burbugas animada

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -283,6 +283,8 @@ header.passwordIncorrectMessage = Falsches Passwort
 
 horizontalMode = Horizontal-Modus
 
+hovertemplateBubble = Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}
+
 information = Information
 
 initialGroups = Erste Gruppen
