--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -357,6 +357,8 @@ header.passwordIncorrectMessage = Contrase\u00F1a incorrecta
 
 horizontalMode = Modo horizontal
 
+hovertemplateBubble = Registros: %{x}<br> Nota media: %{data.grade:.2f}<br> Actividades finalizadas:%{y}
+
 info.courseexported = Curso archivado, disponible en modo sin conexi\u00F3n.
 
 information = Informaci\u00F3n
