--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -283,6 +283,8 @@ header.passwordIncorrectMessage = Password non corretta
 
 horizontalMode = modalit\u00E0 orizzontale
 
+hovertemplateBubble = Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}
+
 info.courseexported = Course archived, available in offline mode.
 
 information = Information
