--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -283,6 +283,8 @@ header.passwordIncorrectMessage = Contrasenya incorrecta
 
 horizontalMode = la manera horitzontal
 
+hovertemplateBubble = Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}
+
 info.courseexported = Course archived, available in offline mode.
 
 information = Information
