--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -357,6 +357,8 @@ header.passwordIncorrectMessage = Password incorrect
 
 horizontalMode = Horizontal mode
 
+hovertemplateBubble = Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}
+
 info.courseexported = Course archived, available in offline mode.
 
 information = Information
