--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -283,6 +283,8 @@ header.passwordIncorrectMessage = Senha incorreta
 
 horizontalMode = modo horizontal
 
+hovertemplateBubble = Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}
+
 info.courseexported = Course archived, available in offline mode.
 
 information = Information
