Arreglado errores y mejoras en la gráfica de burbujas animada

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -23,6 +23,11 @@ BUBBLE.limitDays              = Maximum limit
 BUBBLE.xAxisTitle             = Days after the last access to the Course until {0}
 BUBBLE.yAxisTitle             = Days after the last access to Moodle until {0}
 
+BUBBLE_COMPARISON = Evolution
+
+BUBBLE_COMPARISON.xAxisTitle = Logs
+BUBBLE_COMPARISON.yAxisTitle = Activity completion
+
 BUBBLE_LOGARITHMIC = Engagement (Log.)
 
 BUBBLE_LOGARITHMIC.xAxisTitle = Time after the last access to the Course until {0}
@@ -85,6 +90,8 @@ MEAN_DIFF = Relative Cum.
 
 MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Registres
+
+POINTS_TABLE = Ratings
 
 RADAR = Radar
 
@@ -271,6 +278,8 @@ forum = forum
 
 fourthInterval = quart interval
 
+frameDuration = Frame duration (ms)
+
 general = General
 
 generalActive = estad\u00EDstiques generals
@@ -283,7 +292,7 @@ header.passwordIncorrectMessage = Contrasenya incorrecta
 
 horizontalMode = la manera horitzontal
 
-hovertemplateBubble = Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}
+hovertemplateBubble = <b>%{data.name}</b>Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}<extra></extra>
 
 info.courseexported = Course archived, available in offline mode.
 
@@ -1073,6 +1082,8 @@ tooltip.lastconnection   = \u00DAltim acc\u00E9s
 tooltip.rol              = Rol
 
 tooltipDecimals = informaci\u00F3 sobre eines decimal
+
+transitionDuration = Transition duration (ms)
 
 useInitialNames = Use initials of names
 
