--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -23,6 +23,11 @@ BUBBLE.limitDays              = L\u00EDmite m\u00E1ximo
 BUBBLE.xAxisTitle             = D\u00EDas transcurridos del \u00FAltimo acceso al Curso hasta {0}
 BUBBLE.yAxisTitle             = D\u00EDas transcurridos del \u00FAltimo acceso a Moodle hasta {0}
 
+BUBBLE_COMPARISON = Evoluci\u00F3n
+
+BUBBLE_COMPARISON.xAxisTitle = Registros
+BUBBLE_COMPARISON.yAxisTitle = Finalizaci\u00F3n de actividades
+
 BUBBLE_LOGARITHMIC = Compromiso (Log.)
 
 BUBBLE_LOGARITHMIC.xAxisTitle = Tiempo transcurrido del \u00FAltimo acceso al Curso hasta {0}
@@ -85,6 +90,8 @@ MEAN_DIFF = Acum. Relativos
 
 MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Registros
+
+POINTS_TABLE = Puntuaciones
 
 RADAR = Radar
 
@@ -345,6 +352,8 @@ forum = foro
 
 fourthInterval = Cuarto intervalo
 
+frameDuration = Duraci\u00F3n de imagen (ms)
+
 general = General
 
 generalActive = Estad\u00EDsticas Generales
@@ -357,7 +366,7 @@ header.passwordIncorrectMessage = Contrase\u00F1a incorrecta
 
 horizontalMode = Modo horizontal
 
-hovertemplateBubble = Registros: %{x}<br> Nota media: %{data.grade:.2f}<br> Actividades finalizadas:%{y}
+hovertemplateBubble = <b>%{data.name}</b><br>Registros: %{x}<br>Nota media: %{data.grade:.2f}<br>Actividades finalizadas: %{y}<extra></extra>
 
 info.courseexported = Curso archivado, disponible en modo sin conexi\u00F3n.
 
@@ -1147,6 +1156,8 @@ tooltip.lastconnection   = \u00DAltimo acceso
 tooltip.rol              = Rol
 
 tooltipDecimals = Informaci\u00F3n de decimales
+
+transitionDuration = Duraci\u00F3n de transici\u00F3n (ms)
 
 useInitialNames = Usar iniciales de nombres
 
