--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -23,6 +23,11 @@ BUBBLE.limitDays              = Maximum limit
 BUBBLE.xAxisTitle             = Days after the last access to the Course until {0}
 BUBBLE.yAxisTitle             = Days after the last access to Moodle until {0}
 
+BUBBLE_COMPARISON = Evolution
+
+BUBBLE_COMPARISON.xAxisTitle = Logs
+BUBBLE_COMPARISON.yAxisTitle = Activity completion
+
 BUBBLE_LOGARITHMIC = Engagement (Log.)
 
 BUBBLE_LOGARITHMIC.xAxisTitle = Time after the last access to the Course until {0}
@@ -85,6 +90,8 @@ MEAN_DIFF = Relative Cum.
 
 MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Journaux
+
+POINTS_TABLE = Ratings
 
 RADAR = Radar
 
@@ -271,6 +278,8 @@ forum = forum
 
 fourthInterval = quatri\u00E8me intervalle
 
+frameDuration = Frame duration (ms)
+
 general = G\u00E9n\u00E9ral
 
 generalActive = statistiques g\u00E9n\u00E9rales
@@ -283,7 +292,7 @@ header.passwordIncorrectMessage = Mot de passe incorrect
 
 horizontalMode = mode horizontal
 
-hovertemplateBubble = Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}
+hovertemplateBubble = <b>%{data.name}</b>Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}<extra></extra>
 
 info.courseexported = Course archived, available in offline mode.
 
@@ -1073,6 +1082,8 @@ tooltip.lastconnection   = Dernier acc\u00E8s
 tooltip.rol              = Rol
 
 tooltipDecimals = infobulle d\u00E9cimal
+
+transitionDuration = Transition duration (ms)
 
 useInitialNames = Use initials of names
 
