--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -23,6 +23,11 @@ BUBBLE.limitDays              = Maximum limit
 BUBBLE.xAxisTitle             = Days after the last access to the Course until {0}
 BUBBLE.yAxisTitle             = Days after the last access to Moodle until {0}
 
+BUBBLE_COMPARISON = Evolution
+
+BUBBLE_COMPARISON.xAxisTitle = Logs
+BUBBLE_COMPARISON.yAxisTitle = Activity completion
+
 BUBBLE_LOGARITHMIC = Engagement (Log.)
 
 BUBBLE_LOGARITHMIC.xAxisTitle = Time after the last access to the Course until {0}
@@ -85,6 +90,8 @@ MEAN_DIFF = Relative Cum.
 
 MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Logs
+
+POINTS_TABLE = Ratings
 
 RADAR = Radar
 
@@ -271,6 +278,8 @@ forum = forum
 
 fourthInterval = vierte Intervall
 
+frameDuration = Frame duration (ms)
+
 general = Allgemeines
 
 generalActive = Allgemeine Statistiken
@@ -283,7 +292,7 @@ header.passwordIncorrectMessage = Falsches Passwort
 
 horizontalMode = Horizontal-Modus
 
-hovertemplateBubble = Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}
+hovertemplateBubble = <b>%{data.name}</b>Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}<extra></extra>
 
 information = Information
 
@@ -1070,6 +1079,8 @@ tooltip.lastconnection   = Letzter Zugriff:
 tooltip.rol              = Rol
 
 tooltipDecimals = dezimal Tooltip
+
+transitionDuration = Transition duration (ms)
 
 useInitialNames = Use initials of names
 
