--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -23,6 +23,11 @@ BUBBLE.limitDays              = Maximum limit
 BUBBLE.xAxisTitle             = Days after the last access to the Course until {0}
 BUBBLE.yAxisTitle             = Days after the last access to Moodle until {0}
 
+BUBBLE_COMPARISON = Evolution
+
+BUBBLE_COMPARISON.xAxisTitle = Logs
+BUBBLE_COMPARISON.yAxisTitle = Activity completion
+
 BUBBLE_LOGARITHMIC = Engagement (Log.)
 
 BUBBLE_LOGARITHMIC.xAxisTitle = Time after the last access to the Course until {0}
@@ -85,6 +90,8 @@ MEAN_DIFF = Relative Cum.
 
 MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Logs
+
+POINTS_TABLE = Ratings
 
 RADAR = Radar
 
@@ -345,6 +352,8 @@ forum = forum
 
 fourthInterval = Fourth interval
 
+frameDuration = Frame duration (ms)
+
 general = General
 
 generalActive = General statistics
@@ -357,7 +366,7 @@ header.passwordIncorrectMessage = Password incorrect
 
 horizontalMode = Horizontal mode
 
-hovertemplateBubble = Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}
+hovertemplateBubble = <b>%{data.name}</b>Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}<extra></extra>
 
 info.courseexported = Course archived, available in offline mode.
 
@@ -1147,6 +1156,8 @@ tooltip.lastconnection   = Last access
 tooltip.rol              = Role
 
 tooltipDecimals = Decimal tooltip
+
+transitionDuration = Transition duration (ms)
 
 useInitialNames = Use initials of names
 
