--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -23,6 +23,11 @@ BUBBLE.limitDays              = Maximum limit
 BUBBLE.xAxisTitle             = Days after the last access to the Course until {0}
 BUBBLE.yAxisTitle             = Days after the last access to Moodle until {0}
 
+BUBBLE_COMPARISON = Evolution
+
+BUBBLE_COMPARISON.xAxisTitle = Logs
+BUBBLE_COMPARISON.yAxisTitle = Activity completion
+
 BUBBLE_LOGARITHMIC = Engagement (Log.)
 
 BUBBLE_LOGARITHMIC.xAxisTitle = Time after the last access to the Course until {0}
@@ -85,6 +90,8 @@ MEAN_DIFF = Relative Cum.
 
 MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Logs
+
+POINTS_TABLE = Ratings
 
 RADAR = Radar
 
@@ -271,6 +278,8 @@ forum = forum
 
 fourthInterval = quarto intervallo
 
+frameDuration = Frame duration (ms)
+
 general = Generale
 
 generalActive = statistiche generali
@@ -283,7 +292,7 @@ header.passwordIncorrectMessage = Password non corretta
 
 horizontalMode = modalit\u00E0 orizzontale
 
-hovertemplateBubble = Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}
+hovertemplateBubble = <b>%{data.name}</b>Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}<extra></extra>
 
 info.courseexported = Course archived, available in offline mode.
 
@@ -1073,6 +1082,8 @@ tooltip.lastconnection   = Ultimo accesso
 tooltip.rol              = Rol
 
 tooltipDecimals = decimale tooltip
+
+transitionDuration = Transition duration (ms)
 
 useInitialNames = Use initials of names
 
