Traducciones en reporte ranking word

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -346,8 +346,9 @@ label.loadingstats                = Generant estad\u00EDstiques...
 label.loadingstudents             = S'han carregat les qualificacions dels estudiants...
 label.logentries                  = # logs entries
 label.loggedin                    = Logged in:
-label.ncourses                    = N\u00BA enrolled courses
+label.ncourses                    = # enrolled courses
 label.never                       = No disponible
+label.ngroups                     = # groups
 label.of                          = de
 label.oldPassword                 = Contrasenya antiga:
 label.parselog                    = Parsing logs...
