--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -344,8 +344,9 @@ label.loadingstats                = Statistiken werden erstellt...
 label.loadingstudents             = Sch\u00FClernoten geladen...
 label.logentries                  = # logs entries
 label.loggedin                    = Logged in:
-label.ncourses                    = N\u00BA enrolled courses
+label.ncourses                    = # enrolled courses
 label.never                       = Nicht verf\u00FCgbar
+label.ngroups                     = # groups
 label.of                          = von
 label.oldPassword                 = Altes Passwort:
 label.parselog                    = Parsing logs...
