--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -420,8 +420,9 @@ label.loadingstats                = Generating statistics...
 label.loadingstudents             = Student grades loaded...
 label.logentries                  = # logs entries
 label.loggedin                    = Logged in:
-label.ncourses                    = N\u00BA enrolled courses
+label.ncourses                    = # enrolled courses
 label.never                       = Not available
+label.ngroups                     = # groups
 label.of                          = of
 label.oldPassword                 = Old Password: 
 label.parselog                    = Parsing logs...
