--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -422,6 +422,7 @@ label.logentries                  = # entradas de registros
 label.loggedin                    = Inicio sesi\u00F3n:
 label.ncourses                    = N\u00BA Cursos matriculados
 label.never                       = No disponible
+label.ngroups                     = N\u00BA de grupos
 label.of                          = de
 label.oldPassword                 = Contrase\u00F1a antigua: 
 label.parselog                    = Parseando los registros...
