--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -346,8 +346,9 @@ label.loadingstats                = G\u00E9n\u00E9rer des statistiques...
 label.loadingstudents             = Grades d'\u00E9l\u00E8ves charg\u00E9s...
 label.logentries                  = # logs entries
 label.loggedin                    = Logged in:
-label.ncourses                    = N\u00BA enrolled courses
+label.ncourses                    = # enrolled courses
 label.never                       = Indisponible
+label.ngroups                     = # groups
 label.of                          = de
 label.oldPassword                 = Ancien mot de passe:
 label.parselog                    = Parsing logs...
