--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -346,8 +346,9 @@ label.loadingstats                = Generazione di statistiche...
 label.loadingstudents             = Voti degli studenti caricati...
 label.logentries                  = # logs entries
 label.loggedin                    = Logged in:
-label.ncourses                    = N\u00BA enrolled courses
+label.ncourses                    = # enrolled courses
 label.never                       = Non disponibile
+label.ngroups                     = # groups
 label.of                          = di
 label.oldPassword                 = Vecchia password:
 label.parselog                    = Parsing logs...
