--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -346,8 +346,9 @@ label.loadingstats                = Gerando estat\u00EDsticas...
 label.loadingstudents             = Notas do aluno carregado...
 label.logentries                  = # logs entries
 label.loggedin                    = Logged in:
-label.ncourses                    = N\u00BA enrolled courses
+label.ncourses                    = # enrolled courses
 label.never                       = N\u00E3o dispon\u00EDvel
+label.ngroups                     = # groups
 label.of                          = do
 label.oldPassword                 = Senha Antiga:
 label.parselog                    = Parsing logs...
