Arreglado errores y modificado los angulos de la nube de palabras

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -153,6 +153,8 @@ about_app = \u00DCber die Bewerbung
 
 alertDaysElapsed = Last update warning time (days)
 
+angles = Rotation angles (comma separated)
+
 backGroundImage = Background image
 
 borderLength = Linienbreite
@@ -292,7 +294,7 @@ header.passwordIncorrectMessage = Falsches Passwort
 
 horizontalMode = Horizontal-Modus
 
-hovertemplateBubble = <b>%{data.name}</b>Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}<extra></extra>
+hovertemplateBubble = <b>%{data.name}</b><br>Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}<extra></extra>
 
 information = Information
 
@@ -1082,6 +1084,8 @@ tooltip.rol              = Rol
 tooltipDecimals = dezimal Tooltip
 
 transitionDuration = Transition duration (ms)
+
+useCircles = Use only circles
 
 useInitialNames = Use initials of names
 
