--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -153,6 +153,8 @@ about_app = Sobre a aplica\u00E7\u00E3o
 
 alertDaysElapsed = Last update warning time (days)
 
+angles = Rotation angles (comma separated)
+
 backGroundImage = Background image
 
 borderLength = Espessura da linha
@@ -292,7 +294,7 @@ header.passwordIncorrectMessage = Senha incorreta
 
 horizontalMode = modo horizontal
 
-hovertemplateBubble = <b>%{data.name}</b>Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}<extra></extra>
+hovertemplateBubble = <b>%{data.name}</b><br>Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}<extra></extra>
 
 info.courseexported = Course archived, available in offline mode.
 
@@ -1085,6 +1087,8 @@ tooltip.rol              = Rol
 tooltipDecimals = decimal dica
 
 transitionDuration = Transition duration (ms)
+
+useCircles = Use only circles
 
 useInitialNames = Use initials of names
 
