--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -153,6 +153,8 @@ about_app = Quant a l'aplicaci\u00F3
 
 alertDaysElapsed = Last update warning time (days)
 
+angles = Rotation angles (comma separated)
+
 backGroundImage = Background image
 
 borderLength = ample de l\u00EDnia
@@ -292,7 +294,7 @@ header.passwordIncorrectMessage = Contrasenya incorrecta
 
 horizontalMode = la manera horitzontal
 
-hovertemplateBubble = <b>%{data.name}</b>Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}<extra></extra>
+hovertemplateBubble = <b>%{data.name}</b><br>Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}<extra></extra>
 
 info.courseexported = Course archived, available in offline mode.
 
@@ -1085,6 +1087,8 @@ tooltip.rol              = Rol
 tooltipDecimals = informaci\u00F3 sobre eines decimal
 
 transitionDuration = Transition duration (ms)
+
+useCircles = Use only circles
 
 useInitialNames = Use initials of names
 
