--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -153,6 +153,8 @@ about_app = Acerca de la aplicaci\u00F3n
 
 alertDaysElapsed = Aviso de \u00FAltima actualizaci\u00F3n (en d\u00EDas)
 
+angles = \u00C1ngulos de rotaci\u00F3n (separado por comas)
+
 backGroundImage = Imagen de fondo
 
 borderLength = Ancho de l\u00EDnea
@@ -1159,6 +1161,8 @@ tooltip.rol              = Rol
 tooltipDecimals = Informaci\u00F3n de decimales
 
 transitionDuration = Duraci\u00F3n de transici\u00F3n (ms)
+
+useCircles = Usar solo c\u00EDrculos
 
 useInitialNames = Usar iniciales de nombres
 
