--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -153,6 +153,8 @@ about_app = A propos de l'application
 
 alertDaysElapsed = Last update warning time (days)
 
+angles = Rotation angles (comma separated)
+
 backGroundImage = Background image
 
 borderLength = Largeur de ligne
@@ -292,7 +294,7 @@ header.passwordIncorrectMessage = Mot de passe incorrect
 
 horizontalMode = mode horizontal
 
-hovertemplateBubble = <b>%{data.name}</b>Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}<extra></extra>
+hovertemplateBubble = <b>%{data.name}</b><br>Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}<extra></extra>
 
 info.courseexported = Course archived, available in offline mode.
 
@@ -1085,6 +1087,8 @@ tooltip.rol              = Rol
 tooltipDecimals = infobulle d\u00E9cimal
 
 transitionDuration = Transition duration (ms)
+
+useCircles = Use only circles
 
 useInitialNames = Use initials of names
 
