--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -153,6 +153,8 @@ about_app = Informazioni sull'applicazione
 
 alertDaysElapsed = Last update warning time (days)
 
+angles = Rotation angles (comma separated)
+
 backGroundImage = Path to the background image
 
 borderLength = Larghezza della linea
@@ -292,7 +294,7 @@ header.passwordIncorrectMessage = Password non corretta
 
 horizontalMode = modalit\u00E0 orizzontale
 
-hovertemplateBubble = <b>%{data.name}</b>Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}<extra></extra>
+hovertemplateBubble = <b>%{data.name}</b><br>Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}<extra></extra>
 
 info.courseexported = Course archived, available in offline mode.
 
@@ -1085,6 +1087,8 @@ tooltip.rol              = Rol
 tooltipDecimals = decimale tooltip
 
 transitionDuration = Transition duration (ms)
+
+useCircles = Use only circles
 
 useInitialNames = Use initials of names
 
