Añadido opcion de resetear las fechas

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -1082,6 +1082,7 @@ tooltip.groups.          = Grup:
 tooltip.importcourse     = Import course
 tooltip.insecureprotocol = Aquesta connexi\u00F3 no \u00E9s segura.\r\nLes credencials es poden veure compromeses.
 tooltip.lastconnection   = \u00DAltim acc\u00E9s
+tooltip.resetdates       = Reset dates
 tooltip.rol              = Rol
 
 tooltipDecimals = informaci\u00F3 sobre eines decimal
