--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1156,6 +1156,7 @@ tooltip.groups.          = Group:
 tooltip.importcourse     = Import course
 tooltip.insecureprotocol = This connection is not secure.\r\nCredentials may be compromised.
 tooltip.lastconnection   = Last access
+tooltip.resetdates       = Reset dates
 tooltip.rol              = Role
 
 tooltipDecimals = Decimal tooltip
