--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1156,6 +1156,7 @@ tooltip.groups.          = Grupo:
 tooltip.importcourse     = Importar curso
 tooltip.insecureprotocol = Esta conexi\u00F3n no es segura.\nLas credenciales pueden verse comprometidas.
 tooltip.lastconnection   = \u00DAltimo acceso
+tooltip.resetdates       = Reiniciar fechas
 tooltip.rol              = Rol
 
 tooltipDecimals = Informaci\u00F3n de decimales
