--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -1082,6 +1082,7 @@ tooltip.groups.          = Groupe:
 tooltip.importcourse     = Import course
 tooltip.insecureprotocol = Cette connexion n'est pas s\u00E9curis\u00E9e.\r\nLes informations d'identification peuvent \u00EAtre compromises.
 tooltip.lastconnection   = Dernier acc\u00E8s
+tooltip.resetdates       = Reset dates
 tooltip.rol              = Rol
 
 tooltipDecimals = infobulle d\u00E9cimal
