--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -1082,6 +1082,7 @@ tooltip.groups.          = Gruppo:
 tooltip.importcourse     = Import course
 tooltip.insecureprotocol = Questa connessione non \u00E8 sicura.\r\nLe credenziali potrebbero essere compromesse.
 tooltip.lastconnection   = Ultimo accesso
+tooltip.resetdates       = Reset dates
 tooltip.rol              = Rol
 
 tooltipDecimals = decimale tooltip
