--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -1082,6 +1082,7 @@ tooltip.groups.          = Grupo:
 tooltip.importcourse     = Import course
 tooltip.insecureprotocol = Esta conex\u00E3o n\u00E3o \u00E9 segura.\r\nCredenciais podem estar comprometidas.
 tooltip.lastconnection   = \u00DAltimo acesso
+tooltip.resetdates       = Reset dates
 tooltip.rol              = Rol
 
 tooltipDecimals = decimal dica
