--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -1079,6 +1079,7 @@ tooltip.groups.          = Gruppe:
 tooltip.importcourse     = Import course
 tooltip.insecureprotocol = Diese Verbindung ist nicht sicher.\r\nAnmeldeinformationen sind m\u00F6glicherweise kompromittiert.
 tooltip.lastconnection   = Letzter Zugriff:
+tooltip.resetdates       = Reset dates
 tooltip.rol              = Rol
 
 tooltipDecimals = dezimal Tooltip
