#117 boxplot y violin de calificaciones

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -161,6 +161,8 @@ borderLength = Linienbreite
 
 borderSpace = Zeilenabstand
 
+boxVisible = Box visible
+
 btn.cancel   = Cancel
 btn.clear    = klar
 btn.enter    = Eingeben
@@ -222,6 +224,28 @@ choiceBox.YEAR         = Jahre
 choiceBox.YEAR_MONTH   = Monate
 choiceBox.YEAR_QUARTER = Viertel
 choiceBox.YEAR_WEEK    = Wochen
+
+color0 = [0, 1)
+
+color1 = [1, 2)
+
+color10 = 10
+
+color2 = [2, 3)
+
+color3 = [3, 4)
+
+color4 = [4, 5)
+
+color5 = [5, 6)
+
+color6 = [6, 7)
+
+color7 = [7, 8)
+
+color8 = [8, 9)
+
+color9 = [9, 10)
 
 colorContains = Filtered node color
 
@@ -933,6 +957,8 @@ nodes.weightReceivePost        = Nodes -> Received post weight
 nodes.weightSelfPost           = Nodes -> Auto reply post weight
 nodes.weightSendPost           = Nodes -> Send post weight
 
+notched = Notched
+
 notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
 
 padding = Padding
@@ -972,6 +998,8 @@ secondInterval = Sekunden-Intervall
 showNonConnected = Show nodes without edges
 
 showNumberPosts = Show number of posts
+
+standardDeviation = Standard deviation
 
 statisticsRanking = Statistics ranking
 
