--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -161,6 +161,8 @@ borderLength = Ancho de l\u00EDnea
 
 borderSpace = Espaciado entre l\u00EDneas
 
+boxVisible = Box visible
+
 btn.cancel   = Cancelar
 btn.clear    = Borrar
 btn.enter    = Entrar
@@ -296,6 +298,28 @@ clustering.type.logs.coursemodule        = M\u00F3dulo curso
 clustering.type.logs.event               = Evento
 clustering.type.logs.section             = Secci\u00F3n
 clustering.value                         = Valor
+
+color0 = [0, 1)
+
+color1 = [1, 2)
+
+color10 = 10
+
+color2 = [2, 3)
+
+color3 = [3, 4)
+
+color4 = [4, 5)
+
+color5 = [5, 6)
+
+color6 = [6, 7)
+
+color7 = [7, 8)
+
+color8 = [8, 9)
+
+color9 = [9, 10)
 
 colorContains = Color de nodos filtrados
 
@@ -1010,6 +1034,8 @@ nodes.weightReceivePost        = Nodos -> Peso post recibido
 nodes.weightSelfPost           = Nodos -> Peso post autorespondido
 nodes.weightSendPost           = Nodos -> Peso post enviado
 
+notched = Notched
+
 notificationLoginSSO = Inicio de sesi\u00F3n con autenticaci\u00F3n Single Sign-On (SSO) usando credenciales previas para encriptar/desencriptar cach\u00E9.
 
 padding = Relleno
@@ -1049,6 +1075,8 @@ secondInterval = Segundo intervalo
 showNonConnected = Mostrar nodos sin aristas
 
 showNumberPosts = Mostrar n\u00FAmero de mensajes
+
+standardDeviation = Desviaci\u00F3n t\u00EDpica
 
 statisticsRanking = Ranking estad\u00EDstico
 
