--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -161,6 +161,8 @@ borderLength = Espessura da linha
 
 borderSpace = Espa\u00E7amento entre linhas
 
+boxVisible = Box visible
+
 btn.cancel   = Cancel
 btn.clear    = Claro
 btn.enter    = Entrar
@@ -222,6 +224,28 @@ choiceBox.YEAR         = Anos
 choiceBox.YEAR_MONTH   = Meses
 choiceBox.YEAR_QUARTER = Quartos
 choiceBox.YEAR_WEEK    = Semanas
+
+color0 = [0, 1)
+
+color1 = [1, 2)
+
+color10 = 10
+
+color2 = [2, 3)
+
+color3 = [3, 4)
+
+color4 = [4, 5)
+
+color5 = [5, 6)
+
+color6 = [6, 7)
+
+color7 = [7, 8)
+
+color8 = [8, 9)
+
+color9 = [9, 10)
 
 colorContains = Filtered node color
 
@@ -936,6 +960,8 @@ nodes.weightReceivePost        = Nodes -> Received post weight
 nodes.weightSelfPost           = Nodes -> Auto reply post weight
 nodes.weightSendPost           = Nodes -> Send post weight
 
+notched = Notched
+
 notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
 
 padding = Padding
@@ -975,6 +1001,8 @@ secondInterval = Segundo intervalo
 showNonConnected = Show nodes without edges
 
 showNumberPosts = Show number of posts
+
+standardDeviation = Standard deviation
 
 statisticsRanking = Statistics ranking
 
