#117 cambiado los boxplot y violin a plotly

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -395,6 +395,7 @@ label.showing                     = Showing:
 label.startdate                   = Data de refer\u00E8ncia inicial:
 label.type                        = Tipus:
 label.typecomponentevents         = # components-events type 
+label.updateuserimages            = Downloading user images...
 label.updatinglog                 = S'est\u00E0 actualitzant el registre... (This process may take some time)
 label.user                        = Usuari:
 label.welcome                     = Benvinguda
