--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -393,6 +393,7 @@ label.showing                     = Showing:
 label.startdate                   = Startbezugsdatum:
 label.type                        = Art:
 label.typecomponentevents         = # components-events type 
+label.updateuserimages            = Downloading user images...
 label.updatinglog                 = Protokoll wird aktualisiert ... (This process may take some time)
 label.user                        = Nutzername:
 label.welcome                     = Herzlich willkommen
