--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -469,6 +469,7 @@ label.showing                     = Showing:
 label.startdate                   = Start reference date: 
 label.type                        = Type:
 label.typecomponentevents         = # components-events type 
+label.updateuserimages            = Downloading user images...
 label.updatinglog                 = Parsing logs... (This process may take some time)
 label.user                        = User:
 label.welcome                     = Welcome
