--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -469,6 +469,7 @@ label.showing                     = Mostrando:
 label.startdate                   = Fecha de referencia inicial: 
 label.type                        = Tipo:
 label.typecomponentevents         = # tipos de componentes-evento
+label.updateuserimages            = Descargando im\u00E1genes de los usuarios...
 label.updatinglog                 = Clasificando los registros... (Este proceso puede tardar cierto tiempo)
 label.user                        = Usuario:
 label.welcome                     = Bienvenida/o
