--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -395,6 +395,7 @@ label.showing                     = Showing:
 label.startdate                   = Date de r\u00E9f\u00E9rence de d\u00E9part:
 label.type                        = Type:
 label.typecomponentevents         = # components-events type 
+label.updateuserimages            = Downloading user images...
 label.updatinglog                 = Mise \u00E0 jour du journal ... (This process may take some time)
 label.user                        = Utilisateur:
 label.welcome                     = Bienvenue
