--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -395,6 +395,7 @@ label.showing                     = Showing:
 label.startdate                   = Inizia la data di riferimento:
 label.type                        = Genere:
 label.typecomponentevents         = # components-events type 
+label.updateuserimages            = Downloading user images...
 label.updatinglog                 = Aggiornamento del registro ... (This process may take some time) (This process may take some time)
 label.user                        = Utente:
 label.welcome                     = Benvenuto
