--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -395,6 +395,7 @@ label.showing                     = Showing:
 label.startdate                   = Data de refer\u00EAncia inicial:
 label.type                        = Tipo:
 label.typecomponentevents         = # components-events type 
+label.updateuserimages            = Downloading user images...
 label.updatinglog                 = Atualizando log ... (This process may take some time)
 label.user                        = Usu\u00E1rio:
 label.welcome                     = Bem vinda
