#119 modificado todas las graficas de chartjs a plotly excepto las barras aplidadas

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -77,7 +77,7 @@ GROUP_BOXPLOT = BoxPlot de Grupos
 
 HEAT_MAP = Heatmap
 
-HEAT_MAP.xAxisTitle = {0}
+HEAT_MAP.xAxisTitle = <b>{0}</b>
 
 Hours = horas
 
@@ -106,12 +106,12 @@ RISK_BAR.yAxisTitle          = # de usuarios
 
 RISK_BAR_TEMPORAL = Riesgo en curso
 
-RISK_BAR_TEMPORAL.xAxisTitle = Periodo [{0}, {1})
+RISK_BAR_TEMPORAL.xAxisTitle = <b>Periodo [{0}, {1})</b>
 RISK_BAR_TEMPORAL.yAxisTitle = # de usuarios
 
 RISK_EVOLUTION = Evoluci\u00F3n del riesgo
 
-RISK_EVOLUTION.xAxisTitle = Media entre {0}: Periodo [{1}, {2})
+RISK_EVOLUTION.xAxisTitle = <b>Media entre {0}: Periodo [{1}, {2})</b>
 RISK_EVOLUTION.yAxisTitle = # de usuarios
 
 SCATTER = Dispersi\u00F3n
@@ -121,8 +121,8 @@ SCATTER_USER = Dispersi\u00F3n de usuarios
 SESSION = Sesi\u00F3n
 
 SESSION.timeInterval = Intervalo m\u00E1ximo de minutos
-SESSION.xAxisTitle   = {0}
-SESSION.yAxisTitle   = Minutos (l\u00EDmite intervalo: {0})
+SESSION.xAxisTitle   = <b>{0}</b>
+SESSION.yAxisTitle   = <b>Minutos (l\u00EDmite intervalo: {0})</b>
 
 STACKED_BAR = Barras Apiladas
 
@@ -328,6 +328,8 @@ colorNotContains = Color de nodos no filtrados
 confirmation = Confirmaci\u00F3n
 
 cutGrade = Nota de corte
+
+diagonalColor = Color de l\u00EDnea diagonal
 
 displayXScaleTitle = T\u00EDtulo del eje X
 
