--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -77,7 +77,7 @@ GROUP_BOXPLOT = Boxplot do Grupo
 
 HEAT_MAP = Heatmap
 
-HEAT_MAP.xAxisTitle = {0}
+HEAT_MAP.xAxisTitle = <b>{0}</b>
 
 Hours = Horas
 
@@ -106,12 +106,12 @@ RISK_BAR.yAxisTitle          = # of users
 
 RISK_BAR_TEMPORAL = Course risk
 
-RISK_BAR_TEMPORAL.xAxisTitle = Period [{0}, {1}]
+RISK_BAR_TEMPORAL.xAxisTitle = <b>Period [{0}, {1})</b>
 RISK_BAR_TEMPORAL.yAxisTitle = # of users
 
 RISK_EVOLUTION = Risk evolution
 
-RISK_EVOLUTION.xAxisTitle = Average between {0}: Period [{1}, {2})
+RISK_EVOLUTION.xAxisTitle = <b>Average between {0}: Period [{1}, {2})</b>
 RISK_EVOLUTION.yAxisTitle = # of users
 
 SCATTER = Scatter
@@ -121,8 +121,8 @@ SCATTER_USER = Users scatter
 SESSION = Session
 
 SESSION.timeInterval = Maximum minute interval
-SESSION.xAxisTitle   = {0}
-SESSION.yAxisTitle   = Minutes (interval limit: {0})
+SESSION.xAxisTitle   = <b>{0}</b>
+SESSION.yAxisTitle   = <b>Minutes (interval limit: {0})</b>
 
 STACKED_BAR = Bar Empilhados
 
@@ -254,6 +254,8 @@ colorNotContains = Not filtered node color
 confirmation = Confirmation
 
 cutGrade = Grau de passagem
+
+diagonalColor = Diagonal line color
 
 displayXScaleTitle = T\u00EDtulo X eixo
 
